--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
-    "@shoelace-style/shoelace": "^2.12.0"
+    "@shoelace-style/shoelace": "^2.12.0",
+    "htmx.org": "^1.9.10"
   }
 }
